# Quant-Trading

./: .gitignore  README.md  START_HERE.md  pyproject.toml
configs/: advanced_research.yaml  research.yaml
docs/: course.md  course_advanced.md  data_dictionary.md  experiment_manifest_spec.md  graduation_report_template.md  research_log_advanced.md  research_log_template.md
docs/lessons/: week01.md  week02.md  week03.md  week04.md  week05.md  week06.md  week07.md  week08.md  week09.md  week10.md  week11.md  week12.md  week13.md  week14.md  week15.md  week16.md  week17.md  week18.md  week19.md  week20.md  week21.md  week22.md  week23.md  week24.md
scripts/: learn.py  run_advanced_demo.py  run_course_demo.py  run_paper_daily.py
src/ashare_quant/: __init__.py  backtest.py  config.py  data.py  event_study.py  execution.py  factors.py  fundamentals.py  lesson_content.py  lesson_io.py  lesson_progress.py  lesson_registry.py  lesson_stats.py  lessons.py  lessons_advanced.py  lessons_core.py  lessons_intro.py  lessons_robust.py  (+9 more)
tests/: test_advanced_pipeline.py  test_all_lessons_quick.py  test_backtest.py  test_config.py  test_data_universe.py  test_event_study.py  test_execution.py  test_factors_advanced.py  test_factors_ml.py  test_fundamentals.py  test_lesson_content.py  test_lesson_docs.py  test_lesson_framework.py  test_lesson_stats.py  test_lessons.py  test_lessons_advanced.py  test_lessons_core.py  test_lessons_intro.py  test_lessons_robust.py  test_metrics.py  test_ml_advanced.py  test_monitor.py  test_paper.py  test_portfolio.py  test_risk.py  test_validation.py
