[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-quant-course"
version = "0.1.0"
description = "A reproducible 24-week A-share quantitative trading course"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
data = ["akshare>=1.14"]
ml = ["lightgbm>=4.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
